<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/theme_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/view_horizontal_margin_1"
      android:layout_marginTop="@dimen/view_top_margin_1"
      android:layout_marginEnd="@dimen/view_horizontal_margin_1"
      android:fontFamily="sans-serif-medium"
      android:text="@string/select_theme"
      android:textSize="@dimen/font_size_1"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <RadioGroup
      android:id="@+id/theme_radio_group"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/view_horizontal_margin_1"
      android:layout_marginTop="@dimen/view_top_margin_1"
      android:layout_marginEnd="@dimen/view_horizontal_margin_1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/theme_title">

    <RadioButton
        android:id="@+id/btn_radio_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/light_theme"
        android:textSize="@dimen/font_size_2" />

    <RadioButton
        android:id="@+id/btn_radio_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin_1"
        android:fontFamily="sans-serif"
        android:text="@string/dark_theme"
        android:textSize="@dimen/font_size_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_radio_light" />

    <RadioButton
        android:id="@+id/btn_radio_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin_1"
        android:fontFamily="sans-serif"
        android:text="@string/device_theme"
        android:textSize="@dimen/font_size_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_radio_dark" />
  </RadioGroup>

  <Button
      android:id="@+id/btn_submit"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/view_top_margin_1"
      android:text="@string/submit"
      android:textAllCaps="false"
      android:textSize="@dimen/font_size_2"
      app:icon="@drawable/ic_baseline_check_circle_24"
      app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
      app:layout_constraintHorizontal_chainStyle="spread"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/theme_radio_group" />

  <Button
      android:id="@+id/btn_cancel"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="95dp"
      android:layout_marginTop="@dimen/view_top_margin_1"
      android:text="@string/cancel"
      android:textAllCaps="false"
      android:textSize="@dimen/font_size_2"
      app:icon="@drawable/ic_baseline_cancel_24"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_chainStyle="spread"
      app:layout_constraintStart_toEndOf="@+id/btn_submit"
      app:layout_constraintTop_toBottomOf="@+id/theme_radio_group" />
</androidx.constraintlayout.widget.ConstraintLayout>